fix(core): add margin between collapsed execution group headers (#3943)

--- a/app/scripts/modules/core/src/delivery/executionGroup/executionGroup.less
+++ b/app/scripts/modules/core/src/delivery/executionGroup/executionGroup.less
@@ -107,4 +107,5 @@
 
 .execution-group {
   display: block;
+  margin-bottom: 5px;
 }
